xfce4-power-manager (0.8.4.1-1) UNRELEASED; urgency=low

  * New upstream release.
    - fix xfpm crashing when closing LID.                       closes: #552692
    - allow setting lower value in battery warnings.            closes: #549207

 -- Yves-Alexis Perez <corsac@debian.org>  Mon, 02 Nov 2009 09:56:07 +0100

xfce4-power-manager (0.8.4-1) unstable; urgency=low

  * New upstream release.
  * debian/control:
    - add Recommends on librsvg2-common, all icons are svg.
    - update standards version to 3.8.3. 

 -- Yves-Alexis Perez <corsac@debian.org>  Tue, 29 Sep 2009 11:33:13 +0200

xfce4-power-manager (0.8.3.1-1) unstable; urgency=low

  * New upstream bugfix release.
  * debian/watch edited to track Xfce archive reorganisation.

 -- Yves-Alexis Perez <corsac@debian.org>  Mon, 10 Aug 2009 08:25:55 +0200

xfce4-power-manager (0.8.3-1) unstable; urgency=low

  * New upstream release.

 -- Yves-Alexis Perez <corsac@debian.org>  Mon, 03 Aug 2009 15:20:09 +0200

xfce4-power-manager (0.8.2-1) unstable; urgency=low

  * New upstream release.

 -- Yves-Alexis Perez <corsac@debian.org>  Thu, 09 Jul 2009 23:41:28 +0200

xfce4-power-manager (0.8.1.1-1) unstable; urgency=low

  [ Evgeni Golov ]
  * Fix Vcs-* fields, they were missing 'trunk' in the path.

  [ Yves-Alexis Perez ]
  * New upstream release.
  * debian/control:
    - drop build-dep on libglade.
    - update standards version to 3.8.2. 

 -- Yves-Alexis Perez <corsac@debian.org>  Tue, 07 Jul 2009 00:29:41 +0200

xfce4-power-manager (0.8.0-1) unstable; urgency=low

  * New upstream release.
  * debian/control:
    - update long description, thanks to Gerfried Fuchs.        closes: #531812

 -- Yves-Alexis Perez <corsac@debian.org>  Tue, 09 Jun 2009 23:25:26 +0200

xfce4-power-manager (0.8.0~rc2-4) unstable; urgency=low

  * debian/rules:
    - don't use --fail-missing in dh_install since we have an arch:all
      package. Fixes FTBFS on all arches.                       closes: #530399
