@@ -3,8 +3,11 @@ xfce4-power-manager (0.8.4.1-1) UNRELEASED; urgency=low
   * New upstream release.
     - fix xfpm crashing when closing LID.                       closes: #552692
     - allow setting lower value in battery warnings.            closes: #549207
+    - fix FTBFS when building twice in a row.                   closes: #549650 
+  * debian/xfce4-power-manager.xml: ship a default config to ask user when
+    pressing the power button.                                  closes: #544858
 
- -- Yves-Alexis Perez <corsac@debian.org>  Mon, 02 Nov 2009 09:56:07 +0100
+ -- Yves-Alexis Perez <corsac@debian.org>  Mon, 02 Nov 2009 22:19:21 +0100
 
 xfce4-power-manager (0.8.4-1) unstable; urgency=low
 
